--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 * {
   margin: 0;
   padding: 0;
+  background-color:rgb(84, 39, 126);
 }
 
 .cell {
@@ -35,13 +36,31 @@
 }
 
 .cellWall{
-  background-color: red;
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWqe_1VVt_1yx_Vu2f-6Ozt2MLwdrtalXCNQ&usqp=CAU");
+  background-repeat: no-repeat;
+  /* background-size: 50px 50px; */
+  background-size: cover;
+  /* display: flex; */
+  background-position: center center; 
 }
 
 .cellPath{
+  
   background-color: green;
 }
 
 .heading{
   font-size: larger;
+}
+
+.label{
+  font-size: x-large;
+  color: red;
+}
+
+.buttons{
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 2em;
 }
